--- a/css/style.css
+++ b/css/style.css
@@ -198,6 +198,10 @@ h2 {
   display: flex;
   justify-content: space-between;
 }
+.team-list-item {
+  width: 380px;
+  height: 470px;
+}
 .wrap {
   position: relative;
   background-color: #95e1d3;
@@ -214,8 +218,11 @@ h2 {
   transition: all 200ms linear;
 }
 .overlay {
-  width: 380px;
-  height: 470px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-image: linear-gradient(
     to top,
     rgba(252, 227, 138, 0.9),
@@ -228,11 +235,7 @@ h2 {
   opacity: 0;
 }
 .social-list {
-  width: inherit;
-  height: inherit;
   display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .social-list-item {
@@ -243,8 +246,8 @@ h2 {
   background-repeat: no-repeat;
   background-position: center;
 }
-.social-list-item:not(:nth-child(1)) {
-  border-left: solid 1px rgb(243, 129, 129);
+.social-list-item:not(:last-child) {
+  margin-right: 1px;
 }
 .social-list-item:hover {
   transition: all 200ms linear;
@@ -317,6 +320,8 @@ h2 {
   width: 229px;
   height: 40px;
   border: solid 1px rgb(231, 231, 231);
+}
+::placeholder {
   font-family: "Montserrat", sans-serif;
   font-size: 15px;
   color: rgb(204, 204, 204);
@@ -324,7 +329,6 @@ h2 {
   line-height: 1.6;
   text-align: left;
 }
-
 .contact-form-btn {
   padding: 0;
   border: 0;
